aanpassing naar template

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,7 +1,7 @@
 [core]
 	excludesfile = /Users/hayer/.gitignore_global
 [user]
-	email = jeroen@maildevries.eu
+	email = {{ .email | quote }}
 	name = Jeroen de Vries
 [init]
 	defaultBranch = main
