working template and gitconfig

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,11 +1,3 @@
-[core]
-	excludesfile = /Users/hayer/.gitignore_global
 [user]
-	email = {{ .email | quote }}
-	name = Jeroen de Vries
-[init]
-	defaultBranch = main
-[pull]
-	rebase = true
-[rebase]
-	autoStash = true
+	name = "Jeroen de Vries"
+	email = {{ .email }}
